<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.bm-nttdata</groupId>
	<artifactId>customer-ms</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>customer-ms</name>
	<description>Microservice Spring Boot to Managment Clients</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
		<org.lombok.version>1.18.22</org.lombok.version>
		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
		<org.lombok-mapstruct-binding>0.2.0</org.lombok-mapstruct-binding>
		<spring-cloud.version>2023.0.3</spring-cloud.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
		</dependency>
		<!-- Dependencias necesarias para OpenApi Generator -->
		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>0.2.1</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>2.0.1.Final</version>
		</dependency>
		<!-- Dependencias necesarias para OpenApi Generator -->
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${org.mapstruct.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-openfeign</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-config</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<!--Cobertura con Jacoco-->
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.8</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<!--Cobertura con Jacoco-->
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- Lombok Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<target>17</target> <!-- depending on your project -->
					<annotationProcessorPaths>
						<!--procesador encargado de recorrer el projecto y buscar anotaciones de mapstruct-->
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${org.mapstruct.version}</version>
						</path>
						<!-- other annotation processors -->
						<!--procesador encargado de recorrer el projecto y buscar anotaciones de lombok-->
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${org.lombok.version}</version>
						</path>
						<!--procesador encargado de vincular los procesadores de mapstruct y lombok
						    para que sepa cual de ellos se va a ejecutar primero-->
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok-mapstruct-binding</artifactId>
							<version>${org.lombok-mapstruct-binding}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<!-- Lombok Plugin -->
			<!-- Plugin para el uso de OpenApi Generator -->
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>6.2.0</version>
				<executions>
					<execution>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/api/customer-ms-api.yml</inputSpec>
							<generatorName>spring</generatorName>
							<apiPackage>com.bm_nttdata.customer_ms.api</apiPackage>
							<modelPackage>com.bm_nttdata.customer_ms.model</modelPackage>
							<supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
							<configOptions>
								<delegatePattern>true</delegatePattern>
								<interfaceOnly>false</interfaceOnly> <!-- Para que se generen clases controladoras -->
								<dateLibrary>java8</dateLibrary>
								<java8>true</java8>
								<useSpringBoot3>true</useSpringBoot3>
								<useTags>true</useTags>
							</configOptions>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Plugin para el uso de OpenApi Generator -->
			<!--Cobertura con Jacoco-->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<!--Exclusiones para reporte de cobertura-->
				<configuration>
					<excludes>
						<exclude>com/bm_nttdata/customer_ms/CustomerMsApplication.class</exclude>
						<exclude>com/bm_nttdata/customer_ms/entity/*</exclude>
						<exclude>com/bm_nttdata/customer_ms/exception/*</exclude>
						<exclude>com/bm_nttdata/customer_ms/mapper/*</exclude>
						<exclude>com/bm_nttdata/customer_ms/model/*</exclude>
						<exclude>com/bm_nttdata/customer_ms/api/ApiUtil.class</exclude>
						<exclude>com/bm_nttdata/customer_ms/api/CustomerApi*</exclude>
						<exclude>com/bm_nttdata/customer_ms/api/CustomerApiController.class</exclude>
						<exclude>com/bm_nttdata/customer_ms/api/CustomerApiDelegate.class</exclude>
					</excludes>
				</configuration>
				<!--Exclusiones para reporte de cobertura-->
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!--Cobertura con Jacoco-->
			<!--CheckStyle-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.1.2</version>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<!--<configLocation>${basedir}/src/main/resources/checkstyle/checkstyle.xml</configLocation>-->
					<configLocation>checkstyle.xml</configLocation>
					<encoding>UTF-8</encoding>
					<consoleOutput>true</consoleOutput>
					<linkXRef>false</linkXRef>
					<includeTestSourceDirectory>true</includeTestSourceDirectory>
					<logViolationsToConsole>true</logViolationsToConsole>
					<violationSeverity>warning</violationSeverity>
					<!--
                    <excludes>
                        com/omernaci/checkstyleexample/CheckstyleExampleApplication.java
                    </excludes>
                    -->
				</configuration>
				<dependencies>
					<dependency>
						<groupId>com.puppycrawl.tools</groupId>
						<artifactId>checkstyle</artifactId>
						<version>10.9.1</version>
					</dependency>
				</dependencies>
			</plugin>
			<!--CheckStyle-->
		</plugins>
	</build>

</project>
